# 2D_game_engine

./: CMakeLists.txt
src/: main.cpp
src/core/: InputManager.cpp  InputManager.h  TileMap.cpp  TileMap.h  gameApp.cpp  gameApp.h
src/render/: TextureManager.cpp  TextureManager.h
